--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ services:
     image: nginx:1.13.12-alpine
     volumes:
       - ./nginx/mysite.template:/etc/nginx/conf.d/mysite.template
+      - ./res:/usr/share/nginx/res:ro
       - ./dist:/usr/share/nginx/html:ro
     ports:
       - '8888:80'
     environment:
       - NGINX_PORT=80
+      - NGINX_RES_ROOT=/usr/share/nginx
       - NGINX_ROOT=/usr/share/nginx/html
     command: /bin/sh -c "envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
   slides:
