--- a/nginx/mysite.template
+++ b/nginx/mysite.template
@@ -1,6 +1,12 @@
 server {
   listen ${NGINX_PORT};
   server_name localhost;
-  root ${NGINX_ROOT};
-  index index.html;
+  location /res/ {
+    root ${NGINX_RES_ROOT};
+    autoindex on;
+  }
+  location / {
+    root ${NGINX_ROOT};
+    index index.html;
+  }
 }
